--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "node api/server.js"
   },
   "dependencies": {
-    "json-server": "^0.17.4",
-    "path": "^0.12.7"
+    "json-server": "^0.17.4"
   }
 }
